--- a/Amazon Web Scraper Project.ipynb
+++ b/Amazon Web Scraper Project.ipynb
@@ -239,8 +239,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sending an email (just for fun) when a price hits below a certain level\n",
-    "# out with this script\n",
+    "# sending an email (just for fun) when a price hits below a certain level\n"
+    "# \n",
     "\n",
     "def send_mail():\n",
     "    server = smtplib.SMTP_SSL('smtp.gmail.com',465)\n",
